--- a/config/dataset/neural_data.yaml
+++ b/config/dataset/neural_data.yaml
@@ -1,8 +1,8 @@
 # config/dataset/neural_data.yaml
 # Dataset configuration
 name: neural_data
-path: ${paths.data_dir}/aligned_data_010.csv
-sequence_length: 10  # As specified in Table 2
+path: ${paths.data_dir}/neural_data
+sequence_length: 32  # As specified in Table 2
 apply_pca: true
 n_components: 3
 normalize: true
